--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
 
 server.error.include-message=always
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/api-docs-ui.html
+springdoc.swagger-ui.operationsSorter=method
