--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/groupay
 spring.datasource.username=root
 spring.datasource.password=pass
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
 server.error.include-message=always
