--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ server.error.include-message=always
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/api-docs-ui.html
 springdoc.swagger-ui.operationsSorter=method
+
+spring.flyway.enabled=true
