--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-# docker compose -f ./docker-compose.yml up --build
-# docker exec -it docker-mysql-1 /bin/bash
+# docker-compose up
 
 version: '3'
 services:
   mysql:
-    image: mysql
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: pass
       MYSQL_DATABASE: groupay
