--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
+spring.sql.init.mode=always
+
 server.error.include-message=always
 
 springdoc.api-docs.path=/api-docs
