--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# Application
 spring.application.name=grouPay
 
+server.error.include-message=always
+
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/groupay
 spring.datasource.username=root
 spring.datasource.password=pass
@@ -7,8 +11,7 @@ spring.datasource.password=pass
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
-server.error.include-message=always
-
+# OpenAPI & SwaggerUI
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/api-docs-ui.html
 springdoc.swagger-ui.operationsSorter=method
