--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Application
 spring.application.name=grouPay
 
+# Server
 server.error.include-message=always
 
 # Database
@@ -10,6 +11,9 @@ spring.datasource.password=pass
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
+
+# Flyway
+spring.flyway.locations=classpath:db/migration
 
 # OpenAPI & SwaggerUI
 springdoc.api-docs.path=/api-docs
