--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
 
 # Flyway
-spring.flyway.locations=classpath:db/migration
+spring.flyway.enabled=false
 
 # OpenAPI & SwaggerUI
 springdoc.api-docs.path=/api-docs
