feat: include endpoint and network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,30 +7,28 @@
 
 version: '3'
 services:
-  mysql:
+  spring-app:
+    build: .
+    ports:
+      - 8080:8080
+    networks:
+      - appnet
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://database:3306/groupay
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: pass
+  database:
     image: mysql
+    container_name: database
     environment:
       MYSQL_ROOT_PASSWORD: pass
       MYSQL_DATABASE: groupay
     ports:
       - 3306:3306
+    networks:
+      - appnet
     restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -ppass"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
     volumes:
       - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/schema.sql
-
-  spring-app:
-    build: .
-    ports:
-      - 8080:8080
-    depends_on:
-      mysql:
-        condition: service_healthy
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/groupay
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: pass
+networks: 
+  appnet: {}
