--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=grouPay
 server.error.include-message=always
 
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/groupay
+spring.datasource.url=jdbc:mysql://database:3306/groupay
 spring.datasource.username=root
 spring.datasource.password=pass
 
